# waytoodeep

./: Cargo.toml
src/: dumb.rs  main.rs
