[package]
name = "waytoodeep"
version = "0.1.0"
edition = "2018"

[dependencies]
color-eyre = "0.5.11"
futures = "0.3.16"
reqwest = { version = "0.11.4", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.19", features = ["json"] }
